<resources>
    <string name="app_name">Praktikum-9</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="Edit">Edit</string>
    <string name="del">Delete</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="uid">Uid</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="add_note">Tambah Note</string>
    <string name="client_id">391942552690-5k5n1gi4q28vpkoth0ddasehfrdvkcfq.apps.googleusercontent.com</string>
</resources>